--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-CONFIG_PATH=config/local.yaml
+CONFIG_PATH=config/prod.yml
+POSTGRES_PORT=5433
+SERVER_PORT=8080
+POSTGRES_USER=user
+POSTGRES_PASSWORD=StrongRandomPassword123
+POSTGRES_DB=db
+POSTGRES_PORT=5433
