--- a/config/local.yaml
+++ b/config/local.yaml
@@ -2,3 +2,4 @@ http:
   port: 8080
   timeout: 5s
 env: "local"
+storage_path: "postgres://user:StrongRandomPassword123@localhost:5433/db?sslmode=disable"
